added triangle DP problem

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -228,6 +228,18 @@
 	 <li><a href="http://www.lintcode.com/en/problem/expression-expand/">expression expand(Divide and conquer)</a> </li>
 
 </ul>
+
+
+<div class="codingSectionName">Dynamic Programming</div>
+
+<li><a style=" color : green"; href="https://mp.weixin.qq.com/s?__biz=MzA5MzE4MjgyMw==&mid=2649460029&idx=1&sn=9217dbe2a614601cb87076eebcd9c44f&chksm=887ee335bf096a23599971036410df15d3c53772e8d9eba69020c3ef39aadef06b288e73a3da&scene=38#wechat_redirect">Introduction to Dynamic programming by Jiuzhang</a></li>
+<li><a style=" color : green"; href="lecture/Chapter_9._Dynamic_Programming_v4.2.1.pdf">Dynamic programming lecture</a></li>
+
+<ul>
+	 <li><a href="solution/triangle.html"></a> <a href=http://www.lintcode.com/en/problem/triangle/#>Q</a>  </li>
+</ul>
+
+
 </body>
 
 <div class="codingSectionName">Interview</div>
