--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -236,7 +236,7 @@
 <li><a style=" color : green"; href="lecture/Chapter_9._Dynamic_Programming_v4.2.1.pdf">Dynamic programming lecture</a></li>
 
 <ul>
-	 <li><a href="solution/triangle.html"></a> <a href=http://www.lintcode.com/en/problem/triangle/#>Q</a>  </li>
+	 <li><a href="solution/triangle.html">Triangle</a> <a href=http://www.lintcode.com/en/problem/triangle/#>Q</a>  </li>
 </ul>
 
 
