added jump game and LIS

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -236,10 +236,14 @@
 <li><a style=" color : green"; href="lecture/Chapter_9._Dynamic_Programming_v4.2.1.pdf">Dynamic programming lecture</a></li>
 
 <ul>
-     <li>2维矩阵型DP</li>
+	 <li><a style=" color : green">2维矩阵型</a></li>
 	 <li><a href="solution/minimumPathSum.html">Minimum path sum</a> <a href=http://www.lintcode.com/en/problem/minimum-path-sum/>Q</a>  </li>
 	 <li><a href="solution/uniquepath.html">unique path  <a href=interview/onSite209.txt>  (亚麻onsite是此题变种，矩阵中有些点走不通)</a>  </li>
 	 <li><a href="solution/triangle.html">Triangle</a> <a href=http://www.lintcode.com/en/problem/triangle/#>Q</a>  </li>
+	 <li><a style=" color : green">1维矩阵型(2个for loop)</a></li>
+	 <li><a href="solution/longestIncreasingSequence.html">Longest Increasing Sequence(LIS)</a> <a href=http://www.lintcode.com/en/problem/longest-increasing-subsequence/>Q</a>  </li>
+	 <li>Jump Game I, II<a href=http://www.lintcode.com/en/problem/jump-game/>Q</a>  </li>
+      
 </ul>
 
 
