--- a/html/solution/longestIncreasingSequence.html
+++ b/html/solution/longestIncreasingSequence.html
@@ -24,8 +24,8 @@
         for(int i=1; i &lt;nums.length; i++){
             
                 for( int j=0; j&lt;i; j++){
-                    if ( nums[i] &gt; nums[j] ){
-                        dp[i] = Math.max(dp[i], dp[j] + 1);
+                     if ( nums[i] &gt; nums[j] && ( ( dp[j] + 1 ) > dp[i] ) ){
+                        dp[i] =  dp[j] + 1;
                     }
                 }
         }
