added jump game i and ii

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -243,8 +243,9 @@
 	 <li><a style=" color : green">单序列型(2个for loop)</a></li>
 	 <li><a href="solution/longestIncreasingSequence.html">Longest Increasing Sequence(LIS)</a> <a href=http://www.lintcode.com/en/problem/longest-increasing-subsequence/>Q</a>  </li>
 	 <li><a href="solution/RussionDoll.html">Russian Doll</a> <a href=https://leetcode.com/problems/russian-doll-envelopes/description/>Q</a>  </li>
-	 <li>Jump Game I, II<a href=http://www.lintcode.com/en/problem/jump-game/>Q</a>  </li>
 	 <li><a href="solution/LargestDivisibleSubset.html">Largest divisible subset</a> <a href=http://www.lintcode.com/en/problem/largest-divisible-subset/#>Q</a>  </li>
+	 <li><a href="solution/JumpGameI.html">Jump Game I</a> <a href=http://www.lintcode.com/en/problem/jump-game/>Q</a>  </li>
+	 <li><a href="solution/JumpGameII.html">Jump Game II</a> <a href=http://www.lintcode.com/en/problem/jump-game-ii/>Q</a>  </li>
 
 	 
       
