--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -246,8 +246,10 @@
 	 <li><a href="solution/LargestDivisibleSubset.html">Largest divisible subset</a> <a href=http://www.lintcode.com/en/problem/largest-divisible-subset/#>Q</a>  </li>
 	 <li><a href="solution/JumpGameI.html">Jump Game I</a> <a href=http://www.lintcode.com/en/problem/jump-game/>Q</a>  </li>
 	 <li><a href="solution/JumpGameII.html">Jump Game II</a> <a href=http://www.lintcode.com/en/problem/jump-game-ii/>Q</a>  </li>
+	 <li><a href="solution/perfectSquare_DP.html">perfect Square (n^2) 对比DFS(2^n)</a> <a href=https://leetcode.com/problems/perfect-squares/description/>Q</a>  </li>
+	 <li><a href="solution/workBreak_DP.html">Word break (n^3) 对比用DFS做 (n*2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
+	 <li><a href="solution/workBreak_DP.html">Word break (n^3) 对比用DFS做 (n*2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
 
-	 
       
 </ul>
 
