--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -84,12 +84,12 @@
 
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
+	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，背诵此 DFS BFS模板)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
      <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
-	 <li><a href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里的搜索，比较DFS BFS)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
 	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
      
@@ -247,7 +247,6 @@
 	 <li><a href="solution/JumpGameI.html">Jump Game I</a> <a href=http://www.lintcode.com/en/problem/jump-game/>Q</a>  </li>
 	 <li><a href="solution/JumpGameII.html">Jump Game II</a> <a href=http://www.lintcode.com/en/problem/jump-game-ii/>Q</a>  </li>
 	 <li><a href="solution/perfectSquare_DP.html">perfect Square (n^2) 对比DFS(2^n)</a> <a href=https://leetcode.com/problems/perfect-squares/description/>Q</a>  </li>
-	 <li><a href="solution/workBreak_DP.html">Word break (n^3) 对比用DFS做 (n*2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
 	 <li><a href="solution/workBreak_DP.html">Word break (n^3) 对比用DFS做 (n*2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
 
       
