--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -85,7 +85,8 @@
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵此 DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-     <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
+	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
+	 <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
