--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -139,21 +139,21 @@ void DFS(int x, int y, int m, int n){
 </code></pre>
 
 
-DFS模板：
-什么时候用DFS : 能否在图中一点走到另外一点，且求出这条路径的权重，这种题目只能用DFS解答, 
+DFS模板：<br>
+什么时候用DFS : 能否在图中一点走到另外一点，且求出这条路径的权重，这种题目只能用DFS解答, <br>
 
-void DFS(){
+void DFS(){<br>
 
-   if (){
-       递归的结束条件   I
-   }
+   if (){<br>
+       递归的结束条件   I<br>
+   }<br>
 
-   递归的分解           II
-}
+   递归的分解           II<br>
+}<br>
 
 
-1. 注意的是图里面的DFS要用去重。
-2. 如果DFS的图是无限大的，你要强行加上结束条件，如上题。
+1. 注意的是图里面的DFS要用去重。<br>
+2. 如果DFS的图是无限大的，你要强行加上结束条件，如上题。<br><br><br>
 
 
 
