--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -54,7 +54,7 @@
 	 <li><a href="solution/wordBreakII.html">Word break II</a> <a href="http://www.lintcode.com/en/problem/word-break-ii/"> Q</a></li>
 </ul>
 
-<div class="codingSubSectionName">2D flood Fill DFS专题</div>
+<div class="codingSubSectionName">2D flood Fill DFS专题（用处： 求孤岛面积，给孤岛上色）</div>
 <ul>
 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
