--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -54,6 +54,18 @@
 	 <li><a href="solution/wordBreakII.html">Word break II</a> <a href="http://www.lintcode.com/en/problem/word-break-ii/"> Q</a></li>
 </ul>
 
+<div class="codingSubSectionName">Graph Theory</div>
+<ul>
+	 
+	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
+	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 模板背诵</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+     <li><a href="solution/RedundentConnection.html">Redundant Connection (Union find 应用 ： 无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+     <li><a href="solution/isolatedislandII.html">island count ii (Union find 应用 ： 无向图分组）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+
+</ul>
+
+
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
 
@@ -85,7 +97,6 @@
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵此 DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
