update graph theory

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -61,9 +61,9 @@
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 模板背诵</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-     <li><a href="solution/RedundentConnection.html">Redundant Connection (Union find 应用 ： 无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+     <li><a href="solution/RedundentConnection.html">Redundant Connection (Union find 应用 ： 1. 无向圖求聯通子圖個數， 2.無向圖找環）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
      <li><a href="solution/isolatedislandII.html">island count ii (Union find 应用 ： 无向图分组）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 求孤岛面积，给孤岛上色）</li>
+	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求島的個數， 2求面積， 3求坐標，4求周長， 5給島染色 ）</li>
 	 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
@@ -71,7 +71,7 @@
 
 </ul>
 
-
+tu'mi
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
 
 <ul>
