--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -60,14 +60,16 @@
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
-	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 模板背诵</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-     <li><a href="solution/RedundentConnection.html">Redundant Connection (Union find 应用 ： 1. 无向圖求聯通子圖個數， 2.無向圖找環）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-     <li><a href="solution/isolatedislandII.html">island count ii (Union find 应用 ： 无向图分组）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1. 无向圖求聯通子圖個數， 2.無向圖找環</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+     <li><a href="solution/RedundentConnection.html">Redundant Connection （無向圖找環）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向圖求聯通子圖個數)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>      
+	<li><a href="solution/isolatedislandII.html">island count ii (无向圖求聯通子圖個數）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求島的個數， 2求面積， 3求坐標，4求周長， 5給島染色 ）</li>
 	 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
+	 <li><a style="color:red" ; href="solution/topologicalSorting.html">Topological Sorting(有向图)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 
 </ul>
 
@@ -101,10 +103,7 @@ tu'mi
 
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
-	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵此 DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a href="solution/topologicalSorting.html">Topological Sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
 	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
-	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
