added alien dictionary

--- a/html/solution/graphknowledge.html
+++ b/html/solution/graphknowledge.html
@@ -56,7 +56,7 @@ int[][] graph = { {1, 2}, {2, 3}, {2,4}  }
 
 d. 图的一些有用結論 
 
-1. 边數 == 頂點數 - 1    : 連通图無歡條件
+1. 边数  == 点数 - 1  ： 连通图无欢条件
 
 
 </code></pre>
