--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -60,17 +60,18 @@
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
-	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1. 无向圖求聯通子圖個數， 2.無向圖找環</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-     <li><a href="solution/RedundentConnection.html">Redundant Connection （無向圖找環）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向圖求聯通子圖個數)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>      
-	<li><a href="solution/isolatedislandII.html">island count ii (无向圖求聯通子圖個數）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求島的個數， 2求面積， 3求坐標，4求周長， 5給島染色 ）</li>
+	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1无向图求连通子图个数， 2.无向图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+     <li><a href="solution/RedundentConnection.html">Redundant Connection （无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图求连通子图个数)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>      
+	<li><a href="solution/isolatedislandII.html">island count ii (无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+	 	 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</li>
 	 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
-	 <li><a style="color:red" ; href="solution/topologicalSorting.html">Topological Sorting(有向图)</a> <a href="http://www.lintcode.com/en/problem/topological-sorting/">Q</a>  </li>  
-
+	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图遍历)</a></li>
+	 <li><a href="solution/AlienDictionary.html">Alien dictionary</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
+     
 </ul>
 
 tu'mi
