added alien dictionary

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -69,8 +69,9 @@
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
-	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图遍历)</a></li>
+	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图遍历找环)</a></li>
 	 <li><a href="solution/AlienDictionary.html">Alien dictionary</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
+	 	 <li><a href="solution/courseschedule.html">course schedule</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      
 </ul>
 
@@ -104,7 +105,6 @@ tu'mi
 
 <div class="codingSubSectionName"> Graph BFS</div>
 <ul>
-	 <li><a href="solution/courseschedule.html">course schedule 有向图找环：topological sorting（directed graph)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
 	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
