Added directed graph DFS

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -58,8 +58,8 @@
 <ul>
 	 
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
-	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
+	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(无向图里能否从一点到另一点，理解背诵DFS BFS模板+Google面试题目)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(无向图里能否从一点到另一点，返回权重，只能用Graph DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 应用 ： 1无向图求连通子图个数， 2.无向图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
      <li><a href="solution/RedundentConnection.html">Redundant Connection （无向图找环）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图求连通子图个数)</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>      
@@ -69,13 +69,13 @@
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
-	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图遍历找环)</a></li>
-	 <li><a href="solution/AlienDictionary.html">Alien dictionary</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
-	 	 <li><a href="solution/courseschedule.html">course schedule</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
-     
+	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
+	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
+	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
+     <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS, 有向图DFS和无向图DFS区别)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>  
+
 </ul>
 
-tu'mi
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
 
 <ul>
