--- a/html/solution/topologicalSortingTutorial.html
+++ b/html/solution/topologicalSortingTutorial.html
@@ -14,8 +14,9 @@
 <pre><code>
 
 记住以下结论：
-1. 有向图遍历，找环用topological sorting
+1. 有向图遍历用topological sorting
 2. topological sorting 不能遍历环的节点
+3. topological sorting 必须从进度为0的点出发
 
 
 
