update topological sorting

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -70,9 +70,9 @@
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
 	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
-	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
 	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>  
+	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
      <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS, 有向图DFS和无向图DFS区别)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li> 
      <li ><a style="color:red" ; href="solution/MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>  
 	 
