--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -111,9 +111,10 @@
 <ul>
      <li><a href="solution/clonegraph.html">Clone Graph</a> <a href="http://www.lintcode.com/en/problem/clone-graph/">Q</a>  </li>
      <li><a href="solution/wordladder.html">Wordladder</a> <a href="http://www.lintcode.com/en/problem/word-ladder/">Q</a>  </li>
-	 <li><a href="solution/Six Degrees.html">Six degrees</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
-	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
-     
+	 <li><a href="solution/Six Degrees.html">Six degrees图的BFS由点及面）</a> <a href="http://www.lintcode.com/en/problem/six-degrees/">Q</a>  </li>
+	 <li><a href="solution/FindTheConnectedComponentInUndirectedGraph.html">Find the connected components in undirected graph(图的BFS由点及面）</a> <a href="http://www.lintcode.com/en/problem/find-the-connected-component-in-the-undirected-graph/">Q</a>  </li>
+     <li><a href="solution/IsGraphBipartite.html">is bipartile graphy(图的BFS由点及面）</a> <a href="https://leetcode.com/problems/is-graph-bipartite/description/">Q</a>  </li>
+
 
 </ul>
 
