--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -73,8 +73,10 @@
 	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>  
 	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>  
 	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
-     <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS, 求某种遍历顺序)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>
+     <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS搜索某种路径： 断边法)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>
+	 <li ><a href="solution/FindEventualSafeStates.html">Find Eventual safe sttes(有向图DFS找环：暴力搜索法， 染色法)</a> <a href=https://leetcode.com/problems/find-eventual-safe-states/description/>Q</a>  </li> 
 	 <li ><a href="solution/NetworkDelayTime.html">NetWork Delay(有向图DFS, 求全局权重最优)</a> <a href=https://leetcode.com/problems/network-delay-time/description/>Q</a>  </li> 
+
      <li ><a style="color:red" ; href="solution/MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>  
 	 
 
