added String related question 4/24

--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -246,7 +246,10 @@
 <ul>
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, two pointers）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
 	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， two pointers）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
-	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(sliding window)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
+	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(sliding window two pointers)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
+	 <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
+	 <li><a href="solution/addBoldTaginString.html">Add bold tag in string(根据某种规则修改字符串）</a> <a href="https://leetcode.com/problems/add-bold-tag-in-string/description/">Q</a>  </li>
+
 	 <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/reverseString.html">Reverse string</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="http://www.lintcode.com/en/problem/expression-expand/">expression expand(Divide and conquer)</a> </li>
