--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -244,10 +244,10 @@
 
 	 
 <ul>
-	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, two pointers）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
-	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， two pointers）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
-	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(sliding window two pointers)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
-	 <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
+	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
+	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， 双指针异步）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
+	 <li><a href="solution/ValidWordAbbreviation.html">Valid word abbreviation(字符串压缩，双指针同步）</a> <a href="https://leetcode.com/problems/valid-word-abbreviation/description/">Q</a>  </li>
 	 <li><a href="solution/addBoldTaginString.html">Add bold tag in string(根据某种规则修改字符串）</a> <a href="https://leetcode.com/problems/add-bold-tag-in-string/description/">Q</a>  </li>
 
 	 <li><a href="solution/LongestPalindromSubstring.html">Longest palindrom substring最长回文子串</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
@@ -283,14 +283,26 @@
 </body>
 
 <div class="codingSectionName">Interview</div>
+
+
 <ul>
-	 <li><a href="interview/AmazonInterview1_27_2017.txt">Amazon 1.27.2017</a> </li>
-	 <li><a href="interview/onSite209.txt">Amazon onSite Seattle 02/09/2018</a> </li>
-	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Feb 017</a> </li>
-	 <li><a href="interview/uber_4_6_2016.txt">Uber April 2017</a> </li>
+     	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
+     	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
+
+	 <li><a href="interview/onSite209.txt">Amazon onSite Seattle 02/2018</a> </li>
+
+	 
+	 <li><a href="interview/AmazonInterview1_27_2017.txt">Amazon 01/2017 Phone</a> </li>
+	 
+	 
+	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Phone 02/2017</a> </li>
+	 
+	 <li><a href="interview/uber_4_6_2016.txt">Uber Phone 4/2017</a> </li>
+	 <li><a href="interview/uber_4_25_2018_phone.txt">Uber Phone 4/2018</a> </li>
+
 	 </ul>
 	 
-<div class="codingSectionName">Interview</div>
+<div class="codingSectionName">Resume</div>
 <ul>
 	 <li><a href="interview/resume.doc">Resume</a> </li>
 	 </ul>
